# FishEngine

./: README.md
scripts/: build_test.sh
scripts/build_test_cmake_file/: CMakeLists.txt
src/Editor/UI/: EditorUI.h  drawing_place.h
src/Engine/core/window-sys/: window-sys.cpp  window-sys.h
src/Engine/debug_renderer/: renderer.cpp  renderer.h
src/Engine/debug_renderer/pipeline/: model.h  shader.h
src/Engine/renderer/: TexturesTools.h  assets_loader.cpp  assets_loader.h  opjects.h  shader.h
src/Engine/renderer/tools/: assets_loader.cpp  assets_loader.h
test/window_system/: test_window.cpp
